hphp/test/zend/good/ext/date/tests/bug52062-64bit.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (PHP_INT_SIZE == 4) die('skip 64 bit only');
}
