hphp/test/zend/bad/ext/date/tests/bug53437_var5.php.skipif
<?php if (PHP_INT_SIZE != 8) { die('skip true 64 bit only'); } ?>